Implementing some default MopaBootstrap JS, which fixes automatically some bugs

--- a/src/Piwicms/Admin/ViewBundle/Resources/views/View/edit.html.twig
+++ b/src/Piwicms/Admin/ViewBundle/Resources/views/View/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends "PiwicmsAdminViewBundle::layout.html.twig" %}
 
+{% form_theme form.viewBlock _self %}
+
 {% block javascripts %}
     {{ parent() }}
     <script>
@@ -29,3 +31,8 @@
         </div>
     </div>
 {% endblock body %}
+
+{% block _name_widget %}
+    <div class="text_widget">
+    </div>
+{% endblock %}
