--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -63,6 +63,21 @@
 
     {% block javascripts %}
         {% javascripts '@application_js' combine=true
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/tooltip.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/affix.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/alert.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/button.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/carousel.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/collapse.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/dropdown.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/modal.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/popover.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/scrollspy.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/tab.js'
+            '@MopaBootstrapBundle/Resources/public/bootstrap/js/transition.js'
+            '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
+            '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+
             '@PiwicmsSystemCoreBundle/Resources/public/js/ajax.js'
             '@PiwicmsSystemCoreBundle/Resources/public/highcharts/js/highcharts.js'
             '@PiwicmsSystemCoreBundle/Resources/public/highcharts/js/modules/exporting.js'
