Delete less filter from FileExplorerBundle

--- a/src/Piwicms/Admin/FileExplorerBundle/Resources/views/FileExplorer/index.html.twig
+++ b/src/Piwicms/Admin/FileExplorerBundle/Resources/views/FileExplorer/index.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
     {% stylesheets
     output='assetic/css/compiled/fmelfinder/main.css'
-    filter="less,cssrewrite"
+    filter="cssrewrite"
         'bundles/fmelfinder/css/*'
     %}
     <link rel="stylesheet" href="{{ asset_url }}" />
