Layout changes, adding missing translations and added dashboard

--- a/src/Piwicms/Admin/WebBundle/Resources/views/base.html.twig
+++ b/src/Piwicms/Admin/WebBundle/Resources/views/base.html.twig
@@ -47,7 +47,7 @@
 
     {% block container %}
         {% if app.user %}
-            {% include '::menu.html.twig' %}
+            {% include 'PiwicmsAdminWebBundle::menu.html.twig' %}
         {% endif %}
         <div class="container-fluid main-content">
             {% block flashes %}
