Deleted old newsletterbundle and restarted and added datafixtures for default user and group

--- a/src/Piwicms/Admin/NewsletterBundle/Resources/views/Newsletter/step1.html.twig
+++ b/src/Piwicms/Admin/NewsletterBundle/Resources/views/Newsletter/step1.html.twig
@@ -12,7 +12,7 @@
                         <div class="widget-content padded clearfix">
                             <form action="{{ path('piwicms_admin_newsletter_step2') }}" {{ form_enctype(form) }} method="POST" id="newsletterForm">
                                 {{ form_widget(form) }}
-                                <input class="btn" type="submit" value="{{ 'next'|trans }}" />
+                                <input class="btn btn-default" type="submit" value="{{ 'next'|trans }}" />
                             </form>
                         </div>
                     </div>
