--- a/src/Piwicms/Client/NewsletterBundle/Resources/views/layout.html.twig
+++ b/src/Piwicms/Client/NewsletterBundle/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
     {% block stylesheets %}
         <link type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" rel="stylesheet" />
         {% stylesheets
-        output="css/style.css"
+        output="css/client/style.css"
         filter="less,cssrewrite"
         'bundles/piwicmsadminweb/less/style.less'
         %}
