--- a/src/Piwicms/System/UserBundle/Resources/views/Group/index.html.twig
+++ b/src/Piwicms/System/UserBundle/Resources/views/Group/index.html.twig
@@ -45,7 +45,7 @@
                     </table>
                 </div>
                 <div class="widget-content padded clearfix">
-                    <p><a href="{{ path('piwicms_admin_vroup_new') }}" class="btn btn-primary">{{ 'new'|trans }}</a></p>
+                    <p><a href="{{ path('piwicms_admin_group_new') }}" class="btn btn-primary">{{ 'new'|trans }}</a></p>
                 </div>
             </div>
         </div>
