--- a/src/Piwicms/Admin/WebBundle/Resources/views/base.html.twig
+++ b/src/Piwicms/Admin/WebBundle/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
     {% block stylesheets %}
         <link type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" rel="stylesheet" />
         {% stylesheets
-        output="css/style.css"
+        output="css/admin/style.css"
         filter="less,cssrewrite"
         'http://fonts.googleapis.com/css?family=Lato:100,300,400,700'
         'bundles/piwicmsadminweb/less/style.less'
